fix z-index on menu gradient when menu overlay is on top

--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ body, table, form, input, td, th, p, textarea, select{
     top: 0;
     padding-left: 10px;
     line-height: 40px;
-    z-index: 1000;
+    z-index: 985;
     background: -moz-linear-gradient(left, rgba(61,61,61,0) 0%, rgba(61,61,61,0.9) 30%, rgba(61,61,61,1) 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(61,61,61,0)), color-stop(30%,rgba(61,61,61,0.9)), color-stop(100%,rgba(61,61,61,1))); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(left, rgba(61,61,61,0) 0%,rgba(61,61,61,0.9) 30%,rgba(61,61,61,1) 100%); /* Chrome10+,Safari5.1+ */
